--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,9 @@
 /******* Bootstrap Theming ********/
 
-$primary: #FF4800;
+$primary: red;
 $secondary: #F2F2F4;
 $light: #FFFFFF;
-$dark: #1F1F2E;
+$dark: red;
 
 $font-family-sans-serif: 'Poppins', sans-serif;
 
