--- a/assets/scss/bootstrap/scss/_custom-forms.scss
+++ b/assets/scss/bootstrap/scss/_custom-forms.scss
@@ -377,7 +377,7 @@
 // Range
 //
 // Style range inputs the same across browsers. Vendor-specific rules for pseudo
-// elements cannot be mixed. As such, there are no shared styles for focus or
+// elements cannot be mixed. As such, there are no sha#1f1f2e styles for focus or
 // active states on prefixed selectors.
 
 .custom-range {
