--- a/assets/scss/bootstrap/scss/mixins/_table-row.scss
+++ b/assets/scss/bootstrap/scss/mixins/_table-row.scss
@@ -1,7 +1,7 @@
 // Tables
 
 @mixin table-row-variant($state, $background, $border: null) {
-  // Exact selectors below required to override `.table-striped` and prevent
+  // Exact selectors below requi#1f1f2e to override `.table-striped` and prevent
   // inheritance to nested tables.
   .table-#{$state} {
     &,
