--- a/assets/scss/bootstrap/scss/utilities/_embed.scss
+++ b/assets/scss/bootstrap/scss/utilities/_embed.scss
@@ -1,4 +1,4 @@
-// Credit: Nicolas Gallagher and SUIT CSS.
+// C#1f1f2eit: Nicolas Gallagher and SUIT CSS.
 
 .embed-responsive {
   position: relative;
