--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
-  --red: #dc3545;
+  --#1f1f2e: #dc3545;
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
@@ -99,6 +99,10 @@ p {
   margin-bottom: 1rem;
 }
 
+.logo_header {
+  width: 150px;
+}
+
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
@@ -167,7 +171,7 @@ sup {
 }
 
 a {
-  color: #ff4800;
+  color: #007bff;
   text-decoration: none;
   background-color: transparent;
 }
@@ -1666,17 +1670,17 @@ pre code {
   padding: 0.3rem;
 }
 
-.table-bordered {
+.table-borde#1f1f2e {
   border: 1px solid #dee2e6;
 }
 
-.table-bordered th,
-.table-bordered td {
+.table-borde#1f1f2e th,
+.table-borde#1f1f2e td {
   border: 1px solid #dee2e6;
 }
 
-.table-bordered thead th,
-.table-bordered thead td {
+.table-borde#1f1f2e thead th,
+.table-borde#1f1f2e thead td {
   border-bottom-width: 2px;
 }
 
@@ -1910,7 +1914,7 @@ pre code {
   border-color: #454d55;
 }
 
-.table-dark.table-bordered {
+.table-dark.table-borde#1f1f2e {
   border: 0;
 }
 
@@ -1930,7 +1934,7 @@ pre code {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
-  .table-responsive-sm > .table-bordered {
+  .table-responsive-sm > .table-borde#1f1f2e {
     border: 0;
   }
 }
@@ -1942,7 +1946,7 @@ pre code {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
-  .table-responsive-md > .table-bordered {
+  .table-responsive-md > .table-borde#1f1f2e {
     border: 0;
   }
 }
@@ -1954,7 +1958,7 @@ pre code {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
-  .table-responsive-lg > .table-bordered {
+  .table-responsive-lg > .table-borde#1f1f2e {
     border: 0;
   }
 }
@@ -1966,7 +1970,7 @@ pre code {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
-  .table-responsive-xl > .table-bordered {
+  .table-responsive-xl > .table-borde#1f1f2e {
     border: 0;
   }
 }
@@ -1978,7 +1982,7 @@ pre code {
   -webkit-overflow-scrolling: touch;
 }
 
-.table-responsive > .table-bordered {
+.table-responsive > .table-borde#1f1f2e {
   border: 0;
 }
 
@@ -1998,7 +2002,7 @@ pre code {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .form-control {
     transition: none;
   }
@@ -2500,7 +2504,7 @@ textarea.form-control.is-invalid {
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .btn {
     transition: none;
   }
@@ -2533,8 +2537,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #ff4800;
-  border-color: #ff4800;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-primary:hover {
@@ -2554,8 +2558,8 @@ fieldset:disabled a.btn {
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #fff;
-  background-color: #ff4800;
-  border-color: #ff4800;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
@@ -2860,14 +2864,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #ff4800;
-  border-color: #ff4800;
+  color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #ff4800;
-  border-color: #ff4800;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-outline-primary:focus,
@@ -2877,7 +2881,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #ff4800;
+  color: #007bff;
   background-color: transparent;
 }
 
@@ -2885,8 +2889,8 @@ fieldset:disabled a.btn {
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #ff4800;
-  border-color: #ff4800;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
@@ -3149,7 +3153,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #ff4800;
+  color: #007bff;
   text-decoration: none;
 }
 
@@ -3204,7 +3208,7 @@ input[type="button"].btn-block {
   transition: opacity 0.15s linear;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .fade {
     transition: none;
   }
@@ -3225,7 +3229,7 @@ input[type="button"].btn-block {
   transition: height 0.35s ease;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .collapsing {
     transition: none;
   }
@@ -3455,7 +3459,7 @@ input[type="button"].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #ff4800;
+  background-color: #007bff;
 }
 
 .dropdown-item.disabled,
@@ -3749,8 +3753,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #ff4800;
-  background-color: #ff4800;
+  border-color: #007bff;
+  background-color: #007bff;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3814,8 +3818,8 @@ input[type="button"].btn-block {
 .custom-checkbox
   .custom-control-input:indeterminate
   ~ .custom-control-label::before {
-  border-color: #ff4800;
-  background-color: #ff4800;
+  border-color: #007bff;
+  background-color: #007bff;
 }
 
 .custom-checkbox
@@ -3872,7 +3876,7 @@ input[type="button"].btn-block {
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .custom-switch .custom-control-label::after {
     transition: none;
   }
@@ -4053,14 +4057,14 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #ff4800;
+  background-color: #007bff;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
     box-shadow 0.15s ease-in-out;
   appearance: none;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .custom-range::-webkit-slider-thumb {
     transition: none;
   }
@@ -4082,14 +4086,14 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #ff4800;
+  background-color: #007bff;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
     box-shadow 0.15s ease-in-out;
   appearance: none;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .custom-range::-moz-range-thumb {
     transition: none;
   }
@@ -4114,14 +4118,14 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #ff4800;
+  background-color: #007bff;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
     box-shadow 0.15s ease-in-out;
   appearance: none;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .custom-range::-ms-thumb {
     transition: none;
   }
@@ -4177,7 +4181,7 @@ input[type="button"].btn-block {
     box-shadow 0.15s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .custom-control-label::before,
   .custom-file-label,
   .custom-select {
@@ -4246,7 +4250,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #ff4800;
+  background-color: #007bff;
 }
 
 .nav-fill > .nav-link,
@@ -4904,7 +4908,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #ff4800;
+  color: #007bff;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4930,8 +4934,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #ff4800;
-  border-color: #ff4800;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .page-item.disabled .page-link {
@@ -4967,7 +4971,7 @@ input[type="button"].btn-block {
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .badge {
     transition: none;
   }
@@ -4994,7 +4998,7 @@ a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #ff4800;
+  background-color: #007bff;
 }
 
 a.badge-primary:hover,
@@ -5311,11 +5315,11 @@ a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #ff4800;
+  background-color: #007bff;
   transition: width 0.6s ease;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .progress-bar {
     transition: none;
   }
@@ -5339,7 +5343,7 @@ a.badge-dark.focus {
   animation: progress-bar-stripes 1s linear infinite;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .progress-bar-animated {
     animation: none;
   }
@@ -5398,8 +5402,8 @@ a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #ff4800;
-  border-color: #ff4800;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 .list-group-item + .list-group-item {
@@ -5752,7 +5756,7 @@ a.close.disabled {
   transform: translate(0, -50px);
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .modal.fade .modal-dialog {
     transition: none;
   }
@@ -5785,30 +5789,30 @@ a.close.disabled {
   overflow-y: auto;
 }
 
-.modal-dialog-centered {
+.modal-dialog-cente#1f1f2e {
   display: flex;
   align-items: center;
   min-height: calc(100% - 1rem);
 }
 
-.modal-dialog-centered::before {
+.modal-dialog-cente#1f1f2e::before {
   display: block;
   height: calc(100vh - 1rem);
   height: min-content;
   content: "";
 }
 
-.modal-dialog-centered.modal-dialog-scrollable {
+.modal-dialog-cente#1f1f2e.modal-dialog-scrollable {
   flex-direction: column;
   justify-content: center;
   height: 100%;
 }
 
-.modal-dialog-centered.modal-dialog-scrollable .modal-content {
+.modal-dialog-cente#1f1f2e.modal-dialog-scrollable .modal-content {
   max-height: none;
 }
 
-.modal-dialog-centered.modal-dialog-scrollable::before {
+.modal-dialog-cente#1f1f2e.modal-dialog-scrollable::before {
   content: none;
 }
 
@@ -5898,10 +5902,10 @@ a.close.disabled {
   .modal-dialog-scrollable .modal-content {
     max-height: calc(100vh - 3.5rem);
   }
-  .modal-dialog-centered {
+  .modal-dialog-cente#1f1f2e {
     min-height: calc(100% - 3.5rem);
   }
-  .modal-dialog-centered::before {
+  .modal-dialog-cente#1f1f2e::before {
     height: calc(100vh - 3.5rem);
     height: min-content;
   }
@@ -6252,7 +6256,7 @@ a.close.disabled {
   transition: transform 0.6s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .carousel-item {
     transition: none;
   }
@@ -6294,7 +6298,7 @@ a.close.disabled {
   transition: opacity 0s 0.6s;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .carousel-fade .active.carousel-item-left,
   .carousel-fade .active.carousel-item-right {
     transition: none;
@@ -6317,7 +6321,7 @@ a.close.disabled {
   transition: opacity 0.15s ease;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .carousel-control-prev,
   .carousel-control-next {
     transition: none;
@@ -6389,7 +6393,7 @@ a.close.disabled {
   transition: opacity 0.6s ease;
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media (prefers-#1f1f2euced-motion: #1f1f2euce) {
   .carousel-indicators li {
     transition: none;
   }
@@ -6485,7 +6489,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #ff4800 !important;
+  background-color: #007bff !important;
 }
 
 a.bg-primary:hover,
@@ -6621,7 +6625,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #ff4800 !important;
+  border-color: #007bff !important;
 }
 
 .border-secondary {
@@ -9665,7 +9669,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #ff4800 !important;
+  color: #007bff !important;
 }
 
 a.text-primary:hover,
@@ -9841,8 +9845,8 @@ a.text-dark:focus {
   .table th {
     background-color: #fff !important;
   }
-  .table-bordered th,
-  .table-bordered td {
+  .table-borde#1f1f2e th,
+  .table-borde#1f1f2e td {
     border: 1px solid #dee2e6 !important;
   }
   .table-dark {
@@ -9941,7 +9945,7 @@ p,
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
   color: #ffffff;
-  background: #ff4800;
+  background: #007bff;
 }
 
 @media (max-width: 991.98px) {
@@ -9980,7 +9984,7 @@ p,
   display: block;
   width: 60px;
   height: 60px;
-  background: #ff4800;
+  background: #007bff;
   border-radius: 50%;
   animation: pulse-border 1500ms ease-out infinite;
 }
@@ -9995,7 +9999,7 @@ p,
   display: block;
   width: 60px;
   height: 60px;
-  background: #ff4800;
+  background: #007bff;
   border-radius: 50%;
   transition: all 200ms;
 }
@@ -10062,7 +10066,7 @@ p,
   height: 100px;
   bottom: 0px;
   left: 0;
-  border-bottom: 5px solid #ff4800;
+  border-bottom: 5px solid #007bff;
   transition: 0.5s;
 }
 
@@ -10106,7 +10110,7 @@ p,
 }
 
 .testimonial-carousel .owl-dot.active {
-  background: #ff4800;
+  background: #007bff;
 }
 
 .contact-form .help-block ul {
