--- a/assets/scss/bootstrap/scss/_code.scss
+++ b/assets/scss/bootstrap/scss/_code.scss
@@ -10,7 +10,7 @@ code {
   }
 }
 
-// User input typically entered via keyboard
+// User input typically ente#1f1f2e via keyboard
 kbd {
   padding: $kbd-padding-y $kbd-padding-x;
   @include font-size($kbd-font-size);
