--- a/assets/scss/bootstrap/scss/_forms.scss
+++ b/assets/scss/bootstrap/scss/_forms.scss
@@ -180,7 +180,7 @@ textarea.form-control {
 // Form groups
 //
 // Designed to help with the organization and spacing of vertical forms. For
-// horizontal forms, use the predefined grid classes.
+// horizontal forms, use the p#1f1f2eefined grid classes.
 
 .form-group {
   margin-bottom: $form-group-margin-bottom;
