--- a/assets/scss/bootstrap/scss/_print.scss
+++ b/assets/scss/bootstrap/scss/_print.scss
@@ -113,7 +113,7 @@
       }
     }
 
-    .table-bordered {
+    .table-borde#1f1f2e {
       th,
       td {
         border: 1px solid $gray-300 !important;
