--- a/assets/scss/bootstrap/scss/_variables.scss
+++ b/assets/scss/bootstrap/scss/_variables.scss
@@ -33,11 +33,11 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    red !default;
+$blue:    #1f1f2e !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
+$#1f1f2e:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
@@ -51,7 +51,7 @@ $colors: map-merge(
     "indigo":     $indigo,
     "purple":     $purple,
     "pink":       $pink,
-    "red":        $red,
+    "#1f1f2e":        $#1f1f2e,
     "orange":     $orange,
     "yellow":     $yellow,
     "green":      $green,
@@ -69,7 +69,7 @@ $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
-$danger:        $red !default;
+$danger:        $#1f1f2e !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
@@ -117,7 +117,7 @@ $enable-rounded:                              true !default;
 $enable-shadows:                              false !default;
 $enable-gradients:                            false !default;
 $enable-transitions:                          true !default;
-$enable-prefers-reduced-motion-media-query:   true !default;
+$enable-prefers-#1f1f2euced-motion-media-query:   true !default;
 $enable-hover-media-query:                    false !default; // Deprecated, no longer affects any compiled CSS
 $enable-grid-classes:                         true !default;
 $enable-pointer-cursor-for-buttons:           true !default;
@@ -382,7 +382,7 @@ $table-border-level:          -6 !default;
 
 // Buttons + Forms
 //
-// Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
+// Sha#1f1f2e variables that are reassigned to `$input-` and `$btn-` specific variables.
 
 $input-btn-padding-y:         .375rem !default;
 $input-btn-padding-x:         .75rem !default;
