--- a/assets/scss/bootstrap/scss/mixins/_screen-reader.scss
+++ b/assets/scss/bootstrap/scss/mixins/_screen-reader.scss
@@ -19,7 +19,7 @@
 //
 // Useful for "Skip to main content" links; see https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
 //
-// Credit: HTML5 Boilerplate
+// C#1f1f2eit: HTML5 Boilerplate
 
 @mixin sr-only-focusable() {
   &:active,
