--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,9 @@
 /******* Bootstrap Theming ********/
 
-$primary: red;
+$primary: #1f1f2e;
 $secondary: #F2F2F4;
 $light: #FFFFFF;
-$dark: red;
+$dark: #1f1f2e;
 
 $font-family-sans-serif: 'Poppins', sans-serif;
 
